# okblog

./: .gitignore  README.md  build_and_push.sh  docker-compose.yml
.github/workflows/: admin-deploy.yml  file-deploy.yml  post-deploy.yml  profile-deploy.yml  search-deploy.yml  tag-deploy.yml  web-deploy.yml
admin/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  package.json  vite.config.js
admin/public/: index.html
admin/src/: App.jsx  index.css  index.js  main.jsx
file/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  env.example  requirements.txt
file/routes/: file_routes.py
file/scripts/: init-localstack.sh  init-minio.sh  kibana-setup.sh
file/services/: auth_service.py  file_service.py
file/utils/: logger.py
nginx/: Dockerfile  README.md  api-gateway.conf  common-headers.conf  cors-preflight.conf  deploy_to_caprover.py  docker-compose.yml
post/: Dockerfile  README.md  docker-compose.yml  newrelic.yml  pom.xml
post/scripts/: debezium.md  elasticsearch-sink.json  init-connectors.sh  post-connector.json
profile/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
search/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
search/src/: config.rs  elasticsearch.rs  lib.rs  logger.rs  main.rs  models.rs  routes.rs
search/tests/: elasticsearch_test.rs
tag/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
web/: .dockerignore  Dockerfile  README.md  app.vue  docker-compose.yml  error.vue  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
(+83 files in other folders)
